Annotate PeasPluginInfo return values as transfer none

Otherwise GObject-Introspection says that it is transfer full.

https://bugzilla.gnome.org/show_bug.cgi?id=660524